...
                    android:text="@string/app_wiki"
                    android:textSize="18sp"
                    app:icon="@drawable/help_center_24px"
                    app:iconSize="22dp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:onClick="onClickGithub"
...
